--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "babel-runtime": "^6.20.0",
     "meteor-node-stubs": "~0.2.4",
     "prop-types": "^15.5.10"
+  },
+  "engines": {
+    "node": "4.8.4"
   }
 }
