--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "babel-runtime": "^6.20.0",
     "meteor-node-stubs": "~0.2.4",
     "numeral": "^2.0.6",
-    "prop-types": "^15.5.10"
+    "prop-types": "^15.5.10",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1",
+    "react-flip-move": "^2.9.17"
   },
   "engines": {
     "node": "4.8.4"
